--- a/Templates/ejercicios/ejercicio-8.html
+++ b/Templates/ejercicios/ejercicio-8.html
@@ -16,6 +16,20 @@
   }
 </script>
 
+<script>
+    var count = 0;
+    
+    function clickFunction() {
+        count += 1;
+        // var click = document.getElementById('click').innerHTML = count;
+        var btn = document.getElementById("btn-ejercicio-7-1");
+    
+        if(count >= 2)  {
+            btn.disabled = true;
+        }        
+    }
+    </script>
+
 <div contenteditable="true" id="query">
     {% if respuestas %}
         {% for respuesta in respuestas %}
@@ -27,6 +41,6 @@
     </div>
 
 <div class="container">
-    <button id="btn-ejercicio-7-1">Enviar</button>
+    <button onclick="clickFunction()" id="btn-ejercicio-7-1">Enviar</button>
 </div>
 {% endblock %}
