--- a/Static/css/estilosEjercicios.css
+++ b/Static/css/estilosEjercicios.css
@@ -231,7 +231,7 @@ border-width: 3.1px;
                     /*background-color: #172464;*/
                     width: 100%;
                     /*height: 47.5%;*/
-                    height: 46.5%;
+                    height: 55.5%;
                     display: flex;
                     align-items: center;
                     flex-direction: column;
@@ -250,7 +250,9 @@ font-size: 16px;
                         /*background-color: yellow;*/
                         background-color: #172464;
                         width: 100%;
-                        overflow: auto;
+                        overflow: hidden;
+                        
+                        scroll-behavior: smooth;
                         margin-top: 15px;
                         display: flex;
                         justify-content: center;
