--- a/Templates/ejercicios/ejercicicio-0.html
+++ b/Templates/ejercicios/ejercicicio-0.html
@@ -31,6 +31,20 @@
   }
 </script>
 
+<script>
+  var count = 0;
+  
+  function clickFunction() {
+      count += 1;
+      // var click = document.getElementById('click').innerHTML = count;
+      var btn = document.getElementById("btn-ejercicio-1-6");
+  
+      if(count >= 2)  {
+          btn.disabled = true;
+      }        
+  }
+  </script>
+
 1. Los/Las <select name="" id="pregunta-1">
   <option value="a">sistemas</option>
   <option value="b">computadoras</option>
@@ -113,6 +127,6 @@ manipular uniformemente una unidad de almacenamiento secundaria.<br>
 </select>
 
 <div class="container">
-    <button id="btn-ejercicio-1-6">Enviar</button>
+    <button onclick="clickFunction()" id="btn-ejercicio-1-6">Enviar</button>
 </div>
 {% endblock %}
