--- a/Templates/ejercicios/ejercicio-0-1.html
+++ b/Templates/ejercicios/ejercicio-0-1.html
@@ -26,9 +26,24 @@
 </style>
   
 <script>
-  window.onload = function(){
+  window.onload = function(){ 
       document.getElementById("btn-ejercicio-0-1").addEventListener("click", enviarEjercicio0_1);
+    
   }
+</script>
+
+<script>
+var count = 0;
+
+function clickFunction() {
+    count += 1;
+    // var click = document.getElementById('click').innerHTML = count;
+    var btn = document.getElementById("btn-ejercicio-0-1");
+
+    if(count >= 2)  {
+        btn.disabled = true;
+    }        
+}
 </script>
 
 1. ¿Que es una base de datos?
@@ -125,6 +140,6 @@
 </select>
 
 <div class="container">
-    <button id="btn-ejercicio-0-1">Enviar</button>
+    <button onclick="clickFunction()" id="btn-ejercicio-0-1">Enviar</button>
 </div>
 {% endblock %}
