--- a/Templates/ejercicios/ejercicio-2.html
+++ b/Templates/ejercicios/ejercicio-2.html
@@ -32,6 +32,21 @@
     }
 </script>
 
+<script>
+  var count = 0;
+  
+  function clickFunction() {
+      count += 1;
+      // var click = document.getElementById('click').innerHTML = count;
+      var btn = document.getElementById("btn-ejercicio-2-2");
+  
+      if(count >= 2)  {
+          btn.disabled = true;
+      }        
+  }
+  </script>
+  
+
 <ul id="sortable1" class="droptrue">
   Tipo de dato
   <!-- ORACLE -->
@@ -72,7 +87,7 @@
 <br style="clear:both">
 
 <div class="container">
-  <button id="btn-ejercicio-2-2">Enviar</button>
+  <button onclick="clickFunction()" id="btn-ejercicio-2-2">Enviar</button>
 </div>
  
 {% endblock %}
