--- a/Templates/ejercicios/ejercicio-3_VcznDK1.html
+++ b/Templates/ejercicios/ejercicio-3_VcznDK1.html
@@ -33,6 +33,20 @@
   }
 </script>
 
+<script>
+  var count = 0;
+  
+  function clickFunction() {
+      count += 1;
+      // var click = document.getElementById('click').innerHTML = count;
+      var btn = document.getElementById("btn-ejercicio-2-1");
+  
+      if(count >= 2)  {
+          btn.disabled = true;
+      }        
+  }
+  </script>
+
 <ul id="sortable1" class="droptrue">
   Atributos
   <li class="ui-state-default">Titulo</li>
@@ -77,6 +91,6 @@
 <br style="clear:both">
 
 <div class="container">
-  <button id="btn-ejercicio-2-1">Enviar</button>
+  <button onclick="clickFunction()" id="btn-ejercicio-2-1">Enviar</button>
 </div>
 {% endblock %}
