--- a/Templates/ejercicios/ejercicio-4.html
+++ b/Templates/ejercicios/ejercicio-4.html
@@ -16,6 +16,19 @@
   }
 </script>
 
+<script>
+    var count = 0;
+    
+    function clickFunction() {
+        count += 1;
+        // var click = document.getElementById('click').innerHTML = count;
+        var btn = document.getElementById("btn-ejercicio-5-1");
+    
+        if(count >= 2)  {
+            btn.disabled = true;
+        }        
+    }
+    </script>
 Recuerda:
 <ul>
     <li>El ISBN cuenta con 13 numeros</li>
@@ -42,6 +55,6 @@ Recuerda:
 </div>
 
 <div class="container">
-    <button id="btn-ejercicio-5-1">Enviar</button>
+    <button onclick="clickFunction()" id="btn-ejercicio-5-1">Enviar</button>
 </div>
 {% endblock %}
