--- a/Templates/ejercicios/ejercicio-5-1.html
+++ b/Templates/ejercicios/ejercicio-5-1.html
@@ -31,6 +31,19 @@
   }
 </script>
 
+<script>
+  var count = 0;
+  
+  function clickFunction() {
+      count += 1;
+      // var click = document.getElementById('click').innerHTML = count;
+      var btn = document.getElementById("btn-ejercicio-4-1");
+  
+      if(count >= 2)  {
+          btn.disabled = true;
+      }        
+  }
+  </script>
 
 1. ¿Para que se usan las llaves en BD?
 <select name="" id="pregunta-1">
@@ -135,6 +148,6 @@
 <br>
 
 <div class="container">
-    <button id="btn-ejercicio-4-1">Enviar</button>
+    <button onclick="clickFunction()" id="btn-ejercicio-4-1">Enviar</button>
 </div>
 {% endblock %}
