--- a/Templates/ejercicios/ejercicio-6-2.html
+++ b/Templates/ejercicios/ejercicio-6-2.html
@@ -35,7 +35,19 @@
   }
 </script>
 
-
+<script>
+  var count = 0;
+  
+  function clickFunction() {
+      count += 1;
+      // var click = document.getElementById('click').innerHTML = count;
+      var btn = document.getElementById("btn-ejercicio-5-2");
+  
+      if(count >= 2)  {
+          btn.disabled = true;
+      }        
+  }
+  </script>
 
 <ul id="sortable1" class="droptrue">
   Atributos
@@ -93,7 +105,7 @@
 
 <br style="clear:both">
 <div class="container">
-  <button id="btn-ejercicio-5-2">Enviar</button>
+  <button onclick="clickFunction()" id="btn-ejercicio-5-2">Enviar</button>
 </div>
 
 {% endblock %}
