--- a/Templates/ejercicios/ejercicio-9-2.html
+++ b/Templates/ejercicios/ejercicio-9-2.html
@@ -13,6 +13,20 @@
     document.getElementById("btn-ejercicio-8-2").addEventListener("click", enviarEjercicio8_2);
   }
 </script>
+
+<script>
+	var count = 0;
+	
+	function clickFunction() {
+		count += 1;
+		// var click = document.getElementById('click').innerHTML = count;
+		var btn = document.getElementById("btn-ejercicio-8-2");
+	
+		if(count >= 2)  {
+			btn.disabled = true;
+		}        
+	}
+	</script>
 <!-- drag -->
 <div>
 	Reglas del modelo de negocio:
@@ -164,7 +178,7 @@
 	</div>
 
 	<div class="container">
-		<button id="btn-ejercicio-8-2">Enviar</button>
+		<button onclick="clickFunction()" id="btn-ejercicio-8-2">Enviar</button>
 	</div>
                 
 
