Importacion de alumnos desde excel corregido

--- a/Templates/maestro/addUsers.html
+++ b/Templates/maestro/addUsers.html
@@ -68,8 +68,11 @@
                      <p>Selecciona el archivo de usuarios: </p>  
                      <input type="file" name="xlsxfile">
                      <br>
-                     <p>Selecciona el archivo de alumnos: </p>  
-                     <input type="file" name="xlsxfile2">
+                     <br>
+                     <p>Selecciona el grupo: </p>  
+                     <select name="grupo" class="form-control">
+                         <option value="1"> Bases de datos por diegoico </option>
+                     </select>
                      <br>
                      <br>
                      <center>  
