--- a/Templates/maestro/respuestas31.html
+++ b/Templates/maestro/respuestas31.html
@@ -27,7 +27,7 @@
 				</a>
 				<ul class="navbar-list">
 					<li class="opciones"><a href="{% url 'dashboard' %}" class="opcionInicio">Inicio</a></li>
-					<li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionRespuestas {% if request.path == '/ejercicios/respuestas31' or request.path == '/ejercicios/respuestas31/<int:int>'%} active {%endif%}">Respuestas</a></li>
+					<li class="opciones"><a href="{% url 'respuestas31' %}" class="opcionRespuestas {% if path == 'respuestas31' %} active {%endif%}">Respuestas</a></li>
 					<li class="opciones"><a href="{% url 'getCalificaciones' %}"
 							class="opcionHerramientas">Calificaciones</a></li>
 					<li class="opciones"><a href="{% url 'ejercicios' %}" class="opcionHerramientas">Estado</a></li>
